<package>
  <name>t4ac_msgs</name>
  <version>0.0.0</version>
  <description>The t4ac_msgs package</description>
  <maintainer email="todo@todo.com">TODO</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>

<!-- Msgs dependencies: list below all 
packages your custom messages depend on -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <build_depend>opencv_apps</build_depend>
  <run_depend>opencv_apps</run_depend>
  <build_depend>vision_msgs</build_depend>
  <run_depend>vision_msgs</run_depend>

</package>
